--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -62,13 +62,13 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <a class="page-scroll hvr-underline-from-center" href="#our-work">Nos petits plus</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#about">Pourquoi vous </a>
+                <a class="page-scroll hvr-underline-from-center" href="#about">Pourquoi vous ?</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="#services">Notre travail</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#skills">Pourquoi nous</a>
+                <a class="page-scroll hvr-underline-from-center" href="#skills">Nous choisir</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="#contact">Contactez-nous</a>
@@ -118,14 +118,14 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12">
                 <h4 class="wow fadeInLeft animated">Nous développons, vous aidons à déployer <span>vos
-                idées et votre savoir-faire</span> sur l’ensemble <span>des terminaux connectés</span><br></br>
+                idées et votre savoir-faire</span> sur l’ensemble <span>des terminaux connectés</span><br/>
                 Nous sommes les experts de <span>la digitalisation des espaces de loisirs et culturels</span>
-                pour que votre univers <span>traverse les écrans</span> et touche vos visiteurs et futurs clients<br></br>
+                pour que votre univers <span>traverse les écrans</span> et touche vos visiteurs et futurs clients<br/>
                 Nous mettons en œuvre <span>des solutions simples et efficaces</span> à travers des plateformes
                 multi-supports pour vous aider à gérer vos contenus et vos services <span>en toute autonomie</span>
                 </h4>
                 <a class= "page-scroll" href="#contact">
-                <button class="btn btn-default btn-lg wow fadeInRight hvr-sweep-to-right animated">Dites nous vos besoin</button>
+                <button class="btn btn-default btn-lg wow fadeInRight hvr-sweep-to-right animated">Dites-nous vos besoins</button>
                 </a>
             </div>
             <!-- /.col-md-12 -->
@@ -171,7 +171,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                             <i class="fa fa-eye" aria-hidden="true"></i>
                                         </a>
                                     </div>
-                                    <h3><a href="cartographie.html">La cartographie intéractive</a></h3>
+                                    <h3><a href="cartographie.html">La cartographie interactive</a></h3>
                                     <p>Plongez vos visiteurs dans votre univers</p>
                                 </div>
                             </div>
@@ -231,13 +231,13 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-lg-12">
 
                 <div class="about-text">
-                    <h2 class="wow fadeIn animated">Pourquoi <span> Vous ?</span></h2><br></br>
+                    <h2 class="wow fadeIn animated">Pourquoi <span> Vous ?</span></h2><br/>
                     <h3 class="wow fadeIn animated">
                         <span>Fidéliser un client ou un visiteur et en apporter de nouveaux !</span>
                     </h3>
                       <p class="wow fadeIn animated"> C'est un enjeu majeur pour le développement des
-                        espaces professionnels de loisirs et culturels. Le notre d'enjeu est de renforcer
-                        l'expérience utilisateur de vos canaux de communication en optimisant ses intérations.
+                        espaces professionnels de loisirs et culturels. <br/>
+                          Notre objectif est de renforcer l'expérience utilisateur de vos canaux de communication en optimisant ses interactions.
                       </p>
                       <p class="wow fadeIn animated">Vous obtiendrez des visiteurs en plus ainsi qu'un outils
                         performant personalisé pour transformer ces nouveaux visiteurs en nouveaux clients.
@@ -293,7 +293,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 quote-headline">
-                <h4 class="wow fadeIn animated">Nous sommes avec vous <span>pour rendre les choses mieux </span></h4>
+                <h4 class="wow fadeIn animated">Nous sommes avec vous <span>pour rendre les choses meilleures </span></h4>
             </div>
             <!-- /.quote-headline -->
 
@@ -330,7 +330,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-md-12 service-headline">
                 <h2 class="wow fadeIn animated"> Ce que nous faisons, nous le faisons <span> mieux !</span></h2>
                 <p class="wow fadeIn animated">
-                  Nous apportons notre expertise à votre entreprise pour booster votre chiffre d'affaire
+                  Nous apportons notre expertise à votre entreprise pour booster votre chiffre d'affaires
                   grâce au web. Nous concevons vos plateformes de communication digitale pour développer votre business.
                 </p>
             </div>
@@ -387,7 +387,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="text">
                             <h4>Business</h4>
                             <p>Des outils de statistiques et de prévisions de
-                              votre chiffres d'affaire, relences clients</p>
+                              votre chiffres d'affaires, relences clients</p>
                         </div>
                     </div><br></br>
                     <div class="service-2 wow fadeIn animated">
@@ -663,7 +663,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <script src="assets/js/libraries/jquery.counterup.js"></script>
 <!-- Custom Particle Theme JavaScript -->
 <script>
-    var sentences = ["Boostez votre chiffre d'affaire !", "Développez votre entreprise"];
+    var sentences = ["Boostez votre chiffre d'affaires !", "Développez votre entreprise"];
 </script>
 <script src="assets/js/custom/particle-theme-dark.js"></script>
 </body>
