--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -118,9 +118,13 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12">
                 <h4 class="wow fadeInLeft animated">Nous développons, vous aidons à déployer <span>vos
-                idées et votre savoir-faire</span> sur l’ensemble <span>des terminaux connectés</span><br/>
+                idées et votre savoir-faire</span> sur l’ensemble <span>des terminaux connectés</span>
+                    <br>
+                    <br>
                 Nous sommes les experts de <span>la digitalisation des espaces de loisirs et culturels</span>
-                pour que votre univers <span>traverse les écrans</span> et touche vos visiteurs et futurs clients<br/>
+                pour que votre univers <span>traverse les écrans</span> et touche vos visiteurs et futurs clients
+                    <br>
+                    <br>
                 Nous mettons en œuvre <span>des solutions simples et efficaces</span> à travers des plateformes
                 multi-supports pour vous aider à gérer vos contenus et vos services <span>en toute autonomie</span>
                 </h4>
@@ -149,7 +153,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             </div>
             <!-- /.see-work -->
             <div class="col-md-12 new-style">
-                <p class="wow fadeInLeft animated">Testez les dans votre enseigne, <a href="#">nous les concevons sur mesure !</a></p>
+                <p class="wow fadeInLeft animated">Testez les dans votre enseigne, <a>nous les concevons sur mesure !</a></p>
             </div>
             <!-- /.new-style -->
 
@@ -303,7 +307,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         "Lorsque deux forces sont jointes,
                         <span>leur efficacité est double.</span>."
                     </h3>
-                    <p class="wow fadeIn animated">Isaac NEWTON<span> - Physicien </span></p><br></br>
+                    <p class="wow fadeIn animated">Isaac NEWTON<span> - Physicien </span></p>
+                    <br>
+                    <br>
                     <h3 class="wow fadeIn animated">
                         "La logique vous conduira d’un point A à un point B.
                         <span> L'imagination </span> et <span> l'audace </span>vous conduiront où vous le désirez"
@@ -346,7 +352,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="icons">
                             <i class="material-icons">touch_app</i>
                         </div>
-                    </div><br></br>
+                    </div>
+                    <br>
+                    <br>
                     <div class="service wow fadeIn animated">
                         <div class="text">
                             <h4>Responsive Design</h4>
@@ -355,7 +363,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="icons">
                             <i class="material-icons">important_devices</i>
                         </div>
-                    </div><br></br>
+                    </div>
+                    <br>
+                    <br>
                     <div class="service wow fadeIn animated">
                         <div class="text">
                             <h4>Reférencement Optimisé</h4>
@@ -378,7 +388,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <h4>Expérience Utilisateur</h4>
                             <p>Des fonctionnalités concues pour vos clients et votre entreprise.
                                (Billeterie, Cartographie, File d'attente numérique)</p>
-                        </div><br></br>
+                        </div>
+                        <br>
+                        <br>
                     </div>
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
@@ -389,7 +401,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <p>Des outils de statistiques et de prévisions de
                               votre chiffres d'affaires, relences clients</p>
                         </div>
-                    </div><br></br>
+                    </div>
+                    <br>
+                    <br>
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
                             <i class="material-icons">autorenew</i>
@@ -445,7 +459,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12">
                 <div class="skills-headline">
-                    <h2 class="wow fadeIn animated">Pourquoi<span> Nous ? </span></h2>
+                    <h2 class="wow fadeIn animated"><span> Nous </span> choisir</h2>
                     <p class="wow fadeIn animated">
                         Nos ingénieurs d'expertise en intelligence numérique
                         vous aident à imaginer des solutions digitales adaptées à votre univers.
@@ -572,7 +586,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="info-text wow fadeIn animated">
                                 <p>94200 Ivry sur Seine</p>
                             </div>
-                        </div><br></br>
+                        </div>
+                        <br>
+                        <br>
 
                         <div class="bottom-info">
                             <h4 class="wow fadeIn animated"><span>Connectez-vous</span> avec nous</h4>
@@ -642,8 +658,13 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <!-- Footer
 ================================================== -->
 <footer>
-    <p><a href="$">MORMAN DESIGN </a>© 2017<br></br><a href="$"> Confidentialité</a> |
-      <a href="$">Condition d'utilisation</a> | <a href="$">La loi informatique et liberté</a></p>
+    <p>
+        <a href="$">MORMAN DESIGN </a>© 2017
+        <br>
+        <br>
+        <a href="$"> Confidentialité</a> |
+      <a href="$">Condition d'utilisation</a> | <a href="$">La loi informatique et liberté</a>
+    </p>
 </footer>
 
 <!-- Scripts
