--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -59,7 +59,7 @@
                 <a class="page-scroll hvr-underline-from-center" href="index.html#services">Notre travail</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="index.html#skills">Pourquoi nous</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#skills">Nous choisir</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="index.html#contact">Contactez-nous</a>
@@ -117,7 +117,7 @@
             <div class="col-md-12 service-headline">
                 <h2 class="wow fadeIn animated"> La géolocalisation de Google, directement sur <span> votre plan !</span></h2>
                 <p class="wow fadeIn animated">
-                  Nous vous apportons notre expertise pour fournir un plan intéractif de votre espace à vos clients.
+                  Nous vous apportons notre expertise pour fournir un plan intéractif de votre espace à vos clients. <br>
                   Aidez vos visiteurs à s'orienter.
                 </p>
             </div>
@@ -134,8 +134,9 @@
                         </div>
                         <div class="text">
                             <a href="service-item.html">Géolocalisation précise</a>
-                            <p>La précision de Google map sur votre plan. </p>
-                        </div><br></br>
+                            <p>La précision de Google maps sur votre plan. </p>
+                        </div>
+                        <br><br>
                     </div>
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
@@ -143,9 +144,10 @@
                         </div>
                         <div class="text">
                             <a href="service-item.html">Temps réel</a>
-                            <p>Le rafraichissement instentané offre un outils à vos client pour s'orienter facilement</p>
+                            <p>Le rafraichissement instantané offre un outil à vos clients pour s'orienter facilement</p>
                         </div>
-                    </div><br></br>
+                    </div>
+                    <br><br>
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
                             <i class="material-icons">directions_walk</i>
@@ -218,7 +220,7 @@
                             <div class="info-text wow fadeIn animated">
                                 <p>94200 Ivry sur Seine</p>
                             </div>
-                        </div><br></br>
+                        </div><br><br>
 
                         <div class="bottom-info">
                             <h4 class="wow fadeIn animated"><span>Connectez-vous</span> avec nous</h4>
@@ -288,7 +290,7 @@
 <!-- Footer
 ================================================== -->
 <footer>
-    <p><a href="$">MORMAN DESIGN </a>© 2017<br></br><a href="$"> Confidentialité</a> |
+    <p><a href="$">MORMAN DESIGN </a>© 2017<br><br><a href="$"> Confidentialité</a> |
       <a href="$">Condition d'utilisation</a> | <a href="$">La loi informatique et liberté</a></p>
 </footer>
 
