--- a/particle_dark/file_dattente.html
+++ b/particle_dark/file_dattente.html
@@ -25,7 +25,6 @@
     <link href="assets/css/custom/theme.css" rel="stylesheet">
     <link href="assets/css/custom/colors.css" rel="stylesheet">
 
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -60,7 +59,7 @@
                 <a class="page-scroll hvr-underline-from-center" href="index.html#services">Notre travail</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="index.html#skills">Pourquoi nous</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#skills">Nous choisir</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="index.html#contact">Contactez-nous</a>
@@ -124,7 +123,8 @@
                 <h4 class="wow fadeInLeft animated">Nous passons en moyenne<span> 5j par an </span>dans une file d’attente,
                   c’est à dire que dans votre vie, nous allons passer<span> une année entière à attendre.</span>
                   Notre ambition est d’améliorer la qualité de la vie quotidienne. Notre service permet<span> d’optimiser ces tâches quotidiennes </span>
-                  en ne prenant plus compte de l’attente éventuelle. <br></br>
+                  en ne prenant plus compte de l’attente éventuelle. 
+                    <br><br>
                   <span>Pensez à tout ce que l’on pourrait faire, pourrait vivre !!</span> Les professionnels se heurtent à des problèmes de file d’attente tout les jours,
                   ils n’en peuvent plus et <span>nous non plus !</span>
                 </h4>
@@ -147,7 +147,7 @@
             <div class="col-md-12 service-headline">
                 <h2 class="wow fadeIn animated"> L'application qui permet à vos clients de prendre un ticket et <span>d'attendre en faisant autre chose.</span></h2>
                 <p class="wow fadeIn animated">
-                  C'est votre téléphone qui attend à votre place ! L'application vous averti de l'avancement de la file d'attente et lorsque votre tour approche.
+                  C'est votre téléphone qui attend à votre place ! L'application vous avertit de l'avancement de la file d'attente et lorsque votre tour approche.
                 </p>
                 <p class="wow fadeIn animated">
                 En prenant un ticket virtuel grâce à notre application mobile, le client est alerté lorsque son tour approche et le professionnel peut gérer l’affluence de ses clients de manière sécurisée.
@@ -159,15 +159,15 @@
             <div class="col-md-12 service-content">
 
                 <div class="service-image">
-                    <img src="assets/images/iphone6_1.png" alt="iphone"> <br></br>
+                    <img src="assets/images/iphone6_1.png" alt="iphone"> <br><br>
                     <p>Une interface de prise de ticket directement sur votre site.</p>
                 </div>
                 <div class="service-image">
-                    <img src="assets/images/iphone6_2.png" alt="iphone"><br></br>
+                    <img src="assets/images/iphone6_2.png" alt="iphone"><br><br>
                     <p>L'application avertit le client de l'avancement.</p>
                 </div>
                 <div class="service-image">
-                    <img src="assets/images/iphone6_3.png" alt="iphone"><br></br>
+                    <img src="assets/images/iphone6_3.png" alt="iphone"><br><br>
                     <p>Le client est avertit lorsque que son approche.</p>
                 </div>
             </div>
@@ -190,15 +190,17 @@
         <div class="row">
 
             <div class="col-md-12">
-                <h3 class="wow fadeIn animated">Cette solution facilite <span>tous les professionnels ayant des files d’attente !</span></h3>
+                <h3 class="wow fadeIn animated">Cette solution facilite le quotidien de <span>tous les professionnels gérant des files d’attente !</span></h3>
                 <p class="wow fadeIn animated">  Les professionnels de l’évènementiel, des billetteries, les prestataires
                   (médecins libéraux, esthétique, bien-être..), les gérants d'espaces de loisirs et culturels..
                   Cette solution est pour ceux qui ont un intérêt à diminuer la densité de leurs files d’attente
-                  afin d’améliorer leur expérience client et accroître leurs ventes.</p><br></br>
+                  afin d’améliorer leur expérience client et accroître leurs ventes.</p>
+                <br><br>
                   <p class="wow fadeIn animated"> Fini les heures passées devant une attraction !</p>
                   <p class="wow fadeIn animated"> Fini les interminables queues à la préfecture ou aux services publics !</p>
                   <p class="wow fadeIn animated"> Fini le stress et l'énervement de ne pas savoir quand notre tour approche !</p>
-                  <p class="wow fadeIn animated"> Fini les serpentins sous la Tour Eiffel !</p><br></br>
+                  <p class="wow fadeIn animated"> Fini les serpentins sous la Tour Eiffel !</p>
+                <br><br>
                   <p class="wow fadeIn animated"> <span>Avec notre savoir-faire, l'attente devient détente ! Désormais,
                     permettez à vos clients d'attendre à plusieurs endroits en même temps !</span></p>
                 <a class= "page-scroll" href="#contact">
@@ -264,7 +266,7 @@
                             <div class="info-text wow fadeIn animated">
                                 <p>94200 Ivry sur Seine</p>
                             </div>
-                        </div><br></br>
+                        </div><br><br>
 
                         <div class="bottom-info">
                             <h4 class="wow fadeIn animated"><span>Connectez-vous</span> avec nous</h4>
@@ -334,7 +336,7 @@
 <!-- Footer
 ================================================== -->
 <footer>
-    <p><a href="$">MORMAN DESIGN </a>© 2017<br></br><a href="$"> Confidentialité</a> |
+    <p><a href="$">MORMAN DESIGN </a>© 2017<br><br><a href="$"> Confidentialité</a> |
       <a href="$">Condition d'utilisation</a> | <a href="$">La loi informatique et liberté</a></p>
 </footer>
 
