fix menu & scroll

--- a/particle_dark/file_dattente.html
+++ b/particle_dark/file_dattente.html
@@ -33,7 +33,7 @@
     <![endif]-->
 
 </head>
-<body id="page-top" data-spy="scroll" data-target="#st-nav">
+<body>
 
 <!-- Navigation Menu
 ================================================== -->
@@ -92,9 +92,8 @@
 
                                 </div>
                                 <!-- /.typed-headline -->
-                                <a class= "page-scroll" href="#big-image">
-                                <button  class="btn btn-default pull-right hvr-sweep-to-right" id="project-info">L'explication...</button>
-                                </a>
+
+                                <a href="#" class="btn btn-default pull-right hvr-sweep-to-right" id="project-info">L'explication ...</a>
                             </div>
                         </div>
                     </div>
@@ -113,7 +112,7 @@
 
 <!-- Image Section
 ================================================== -->
-<section id="big-image" class="image-section">
+<section class="image-section" id="portfolio-details">
 
     <div class="container">
 
@@ -361,6 +360,5 @@
     var sentences = ["La nouvelle expérience de l'attente"];
 </script>
 <script src="assets/js/custom/portfolio-item.js"></script>
-<script src="assets/js/custom/particle-theme-dark.js"></script>
 </body>
 </html>
