--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -117,16 +117,16 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12">
-                <h4 class="wow fadeInLeft animated">Nous développons, vous aidons à déployer <span>vos
+                <h4 class="wow fadeInLeft animated">Nous vous aidons à mettre en place <span>vos
                 idées et votre savoir-faire</span> sur l’ensemble <span>des terminaux connectés</span>
                     <br>
                     <br>
-                Nous sommes les experts de <span>la digitalisation des espaces de loisirs et culturels</span>
-                pour que votre univers <span>traverse les écrans</span> et touche vos visiteurs et futurs clients
+                Faites confiance à des experts de <span>la digitalisation des espaces de loisirs et culturels</span>
+                pour que votre univers <span>traverse les écrans</span> et touche vos visiteurs et prospects
                     <br>
                     <br>
-                Nous mettons en œuvre <span>des solutions simples et efficaces</span> à travers des plateformes
-                multi-supports pour vous aider à gérer vos contenus et vos services <span>en toute autonomie</span>
+                Nous mettons en œuvre <span>des solutions simples et efficaces</span> sur tous les supports pour vous
+                    aider à gérer vos contenus et vos services <span>en toute autonomie</span>
                 </h4>
                 <a class= "page-scroll" href="#contact">
                 <button class="btn btn-default btn-lg wow fadeInRight hvr-sweep-to-right animated">Dites-nous vos besoins</button>
@@ -159,35 +159,32 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12 portfolio-images">
                 <div class="col-md-6 ">
+                    <div class="portfolio-img first" onClick="window.open('cartographie.html');">
+                            <img class="img-responsive" src="assets/images/cartographie.jpg"
+                                 alt="porftofilio thumbnail"/>
+                            <div class="sweep-left"></div>
+                            <div class="sweep-from-center">
+                                <div class="sweep-layer">
+                                    <div class="sweep-content">
 
-                    <div class="portfolio-img first">
-                        <img class="img-responsive" src="assets/images/cartographie.jpg"
-                             alt="porftofilio thumbnail">
-
-
-                        <div class="sweep-left"></div>
-                        <div class="sweep-from-center">
-                            <div class="sweep-layer">
-                                <div class="sweep-content">
-
-                                    <div class="sweep-icon">
-                                      <a href="cartographie.html">
-                                            <i class="fa fa-eye" aria-hidden="true"></i>
-                                        </a>
+                                        <div class="sweep-icon">
+                                          <a href="cartographie.html">
+                                                <i class="fa fa-eye" aria-hidden="true"></i>
+                                            </a>
+                                        </div>
+                                        <h3><a href="cartographie.html" target="_blank">La cartographie interactive</a></h3>
+                                        <p>Plongez vos visiteurs dans votre univers</p>
                                     </div>
-                                    <h3><a href="cartographie.html">La cartographie interactive</a></h3>
-                                    <p>Plongez vos visiteurs dans votre univers</p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="sweep-right"></div>
+                            <div class="sweep-right"></div>
                     </div>
                     <!-- /.portfolio-img -->
                 </div>
                 <!-- /.col-md-3 -->
 
                 <div class="col-md-6 col-sm-6 col-xs-6">
-                    <div class="portfolio-img second">
+                    <div class="portfolio-img second" onClick="window.open('file_dattente.html');">
                         <img class="img-responsive" src="assets/images/attente.png"
                              alt="porftofilio thumbnail">
                         <div class="sweep-left"></div>
@@ -199,7 +196,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                             <i class="fa fa-eye" aria-hidden="true"></i>
                                         </a>
                                     </div>
-                                    <h3><a href="file_dattente.html">La file d'attente numérique</a></h3>
+                                    <h3><a href="file_dattente.html" target="_blank">La file d'attente numérique</a></h3>
                                     <p>La révolution de l'attente est en marche</p>
                                 </div>
                             </div>
@@ -237,14 +234,14 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="about-text">
                     <h2 class="wow fadeIn animated">Pourquoi <span> Vous ?</span></h2><br/>
                     <h3 class="wow fadeIn animated">
-                        <span>Fidéliser un client ou un visiteur et en apporter de nouveaux !</span>
+                        <span>Fidéliser vos visiteurs et convainquez-en de nouveaux !</span>
                     </h3>
-                      <p class="wow fadeIn animated"> C'est un enjeu majeur pour le développement des
+                      <p class="wow fadeIn animated"> C'est le défi majeur à l'horizon 2025 pour le développement des
                         espaces professionnels de loisirs et culturels. <br/>
-                          Notre objectif est de renforcer l'expérience utilisateur de vos canaux de communication en optimisant ses interactions.
+                          Notre objectif est de renforcer votre relation avec vos propres canaux de communication en optimisant ses interactions.
                       </p>
-                      <p class="wow fadeIn animated">Vous obtiendrez des visiteurs en plus ainsi qu'un outils
-                        performant personalisé pour transformer ces nouveaux visiteurs en nouveaux clients.
+                      <p class="wow fadeIn animated">Vous obtiendrez daventage de visiteurs ainsi qu'un outil
+                        performant personalisé pour fidéliser vos clients historiques.
                       </p>
                     <ul class="about-icons list-inline">
                         <li class="wow fadeIn animated">
@@ -297,7 +294,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 quote-headline">
-                <h4 class="wow fadeIn animated">Nous sommes avec vous <span>pour rendre les choses meilleures </span></h4>
+                <h4 class="wow fadeIn animated">Nous sommes avec vous <span>pour vous accompagner dans votre digitalisation</span></h4>
             </div>
             <!-- /.quote-headline -->
 
@@ -334,7 +331,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 service-headline">
-                <h2 class="wow fadeIn animated"> Ce que nous faisons, nous le faisons <span> mieux !</span></h2>
+                <h2 class="wow fadeIn animated"> Nos forces à <span> votre service !</span></h2>
                 <p class="wow fadeIn animated">
                   Nous apportons notre expertise à votre entreprise pour booster votre chiffre d'affaires
                   grâce au web. Nous concevons vos plateformes de communication digitale pour développer votre business.
@@ -358,7 +355,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="service wow fadeIn animated">
                         <div class="text">
                             <h4>Responsive Design</h4>
-                            <p>Compatible et s'adapte à tout type de support.</p>
+                            <p>Compatible et adapté à tout type de support.</p>
                         </div>
                         <div class="icons">
                             <i class="material-icons">important_devices</i>
@@ -368,8 +365,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <div class="service wow fadeIn animated">
                         <div class="text">
-                            <h4>Reférencement Optimisé</h4>
-                            <p>Référencement organique ou sponsorisé pour une notoriété améliorée.</p>
+                            <h4>Une visibilité améliorée</h4>
+                            <p>Référencement naturel ou payant pour une notoriété améliorée.</p>
                         </div>
                         <div class="icons">
                             <i class="material-icons">visibility</i>
@@ -397,9 +394,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <i class="material-icons">trending_up</i>
                         </div>
                         <div class="text">
-                            <h4>Business</h4>
+                            <h4>Orienté Business</h4>
                             <p>Des outils de statistiques et de prévisions de
-                              votre chiffres d'affaires, relences clients</p>
+                              votre chiffre d'affaires, gestion de relances clients</p>
                         </div>
                     </div>
                     <br>
@@ -410,7 +407,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </div>
                         <div class="text">
                             <h4>Autonome</h4>
-                            <p>News letters automatisées, envoie ciblé</p>
+                            <p>Newsletters automatisées, envois ciblés</p>
                         </div>
                     </div>
                 </div>
@@ -461,16 +458,16 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="skills-headline">
                     <h2 class="wow fadeIn animated"><span> Nous </span> choisir</h2>
                     <p class="wow fadeIn animated">
-                        Nos ingénieurs d'expertise en intelligence numérique
-                        vous aident à imaginer des solutions digitales adaptées à votre univers.
+                        Nos ingénieurs experts en intelligence numérique
+                        vous aident à imaginer de nouvelles solutions digitales adaptées à votre univers.
                     </p>
                     <p class="wow fadeIn animated">
-                        Nos développeurs agréés et créatifs sont nos ingénieurs de tous les possibles.
+                        Nos développeurs certifiés et créatifs sont nos ingénieurs de tous les possibles.
                         Ils réalisent vos interfaces modernes et autonomes.
                     </p>
                     <p class="wow fadeIn animated">
                         Nos experts en stratégie digitale vous accompagnent afin de créer
-                        des intérfaces qui vous ressemble et booster votre visibilité.
+                        des interfaces qui vous ressemble et booster votre visibilité.
                     </p>
                 </div>
             </div>
@@ -497,7 +494,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </div>
                     </div>
                     <div class="bar-wrapper">
-                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">Certifications référencement </div>
+                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">Expertise référencement </div>
                         <div class="col-md-8 col-sm-8 col-xs-7">
                             <div class="progressBar gradient wow animated third-bar"></div>
                         </div>
@@ -506,21 +503,12 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </div>
                     </div>
                     <div class="bar-wrapper">
-                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">WEB DESIGN</div>
+                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">Web Design</div>
                         <div class="col-md-8 col-sm-8 col-xs-7">
                             <div class="progressBar gradient wow animated fourth-bar"></div>
                         </div>
                         <div class="col-md-1 col-sm-1 col-xs-1">
                             <span class="counter">80</span><span>%</span>
-                        </div>
-                    </div>
-                    <div class="bar-wrapper">
-                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">HTML / CSS / JAVASCRIPT</div>
-                        <div class="col-md-8 col-sm-8 col-xs-7">
-                            <div class="progressBar gradient wow animated fifth-bar"></div>
-                        </div>
-                        <div class="col-md-1 col-sm-1 col-xs-1">
-                            <span class="counter">85</span><span>%</span>
                         </div>
                     </div>
                 </div>
@@ -591,7 +579,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <br>
 
                         <div class="bottom-info">
-                            <h4 class="wow fadeIn animated"><span>Connectez-vous</span> avec nous</h4>
+                            <h4 class="wow fadeIn animated"><span>Retrouvez nous</span> sur les réseaux</h4>
 
                             <ul class="list-inline social-icons wow fadeIn animated">
                                 <li>
